--- a/app-admin/assets/scss/card.scss
+++ b/app-admin/assets/scss/card.scss
@@ -45,13 +45,70 @@
 		}
 	}
 
+	&.card-user {
+		position: absolute;
+		top:15px;
+		right: 25px;
+	}
+	
+	&.card-canvas {
+
+		position: fixed;
+		top:0;
+		bottom: 0;
+		left: -100%;
+		border:1px solid #E5E5E5;
+		border-top:0;
+		border-bottom:0;
+		background-color: #FFF;
+		width: 20%;
+		min-width: 100px;
+	}
+	
+	&.off-canvas {
+		left: -100%;
+	}
+
+	&.on-canvas {
+		left: 0px;
+	}
+	
+	&.card-popover {
+		background: #fff;
+		border: 1px solid #ccc;
+		border-color: rgba(0,0,0,.2);
+		-webkit-box-shadow: 0 2px 10px rgba(0,0,0,.2);
+		box-shadow: 0 2px 10px rgba(0,0,0,.2);
+		display: none;
+		outline: none;
+		overflow: hidden;
+		position: absolute;
+		right: 0;
+		top: 25px;
+		-webkit-border-radius: 1px;
+		border-radius: 1px;
+		-webkit-user-select: text;
+		min-height: 196px;
+		overflow-y: auto;
+		width: 280px;
+		@include animate(display, .2s, linear);
+	}
+
+	&.card-nav-menu {
+		position: absolute;
+		top:25px;
+		right:100px;
+	}
+
 	.card-opcoes {
+		position: absolute;
 		background-color: #fff;
 		border: 1px solid #e0e0e0;
 		border: none;
 		border-radius: 1px;
 		box-shadow: 0 2px 2px 0 rgba(0,0,0,0.12);
-	
+		right: 0px;
+		
 		a {
 			text-decoration: none;
 			color: #000;
