--- a/app-admin/assets/scss/janela.scss
+++ b/app-admin/assets/scss/janela.scss
@@ -8,7 +8,7 @@
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.12);
 	@include border-radius();
 	header,
-	header.titulo {
+	.titulo {
 		background-color: $backgroudColorTitulo;
 		width: 100%;
 		padding: 5px 10px;
@@ -21,6 +21,61 @@
 		position: relative;
 		@include border-top-radios();
 		height: 38px;
+
+		.aba {
+			background-color: #fff;
+			display: inline-block;
+			padding-left: 8px;
+			padding-right: 5px;
+			padding-top: 10px;
+			padding-bottom: 5px;
+			border-width: 10px;
+			bottom: 0;
+			position: relative;
+		}
+	}
+
+	&.janela-aba {
+
+		.titulo {
+			padding: 0px 10px;
+			position: relative;
+			background-color: #E3E3E3;
+
+			.caret-right:before {
+				position: absolute;
+				top:0;
+				right: -19px;
+				border-top: 38px solid transparent;
+				border-bottom: 0px solid transparent;
+				border-left: 20px solid #fff;
+			}
+
+			.action {
+				margin-left:20px;
+				display:inline-block;
+				color:#131418;
+				text-align:right;
+				text-decoration: none;
+				padding-left:10px;
+				.icone {
+					color:#131418;
+				}
+			}
+
+			.icones {
+				padding: 6px 12px;
+			}
+
+			.controle {
+
+				input[type='text'],
+				input[type='email'],
+				input[type='search'] {
+					margin-top: 5px;
+				}
+			}
+		}
 	}
 	
 	.corpo,
