--- a/app-admin/assets/scss/janela.scss
+++ b/app-admin/assets/scss/janela.scss
@@ -33,6 +33,21 @@
 			bottom: 0;
 			position: relative;
 		}
+
+		.controle {
+			margin-top:1px;
+
+			input[type='text'],
+			input[type='email'],
+			input[type='search'] {
+				// margin-top: -1px;
+				margin-right:15px;
+			}
+
+			.pull-right {
+				margin-left:8px;
+			}
+		}
 	}
 
 	&.janela-aba {
@@ -64,20 +79,28 @@
 			}
 
 			.icones {
-				padding: 6px 12px;
+				padding: 6px 18px;
 			}
-
+			
 			.controle {
+				
+				margin-top:-10px;
 
 				input[type='text'],
 				input[type='email'],
 				input[type='search'] {
-					margin-top: 5px;
+					margin-top: 0px;
+					margin-right:25px;
 				}
+
 			}
+
 		}
 	}
 	
+
+	
+
 	.corpo,
 	.rodape {
 		width: 100%;
