--- a/app-admin/assets/scss/janela.scss
+++ b/app-admin/assets/scss/janela.scss
@@ -84,13 +84,13 @@
 			
 			.controle {
 				
-				margin-top:-10px;
+				// margin-top:-10px;
 
 				input[type='text'],
 				input[type='email'],
 				input[type='search'] {
-					margin-top: 0px;
-					margin-right:25px;
+					margin-top: 5px;
+					margin-right:5px;
 				}
 
 			}
