--- a/app-admin/assets/scss/campos.scss
+++ b/app-admin/assets/scss/campos.scss
@@ -5,8 +5,6 @@ input:not([type=checkbox]) {
 	border:1px solid rgba(0,0,0,.2);
 	width: 100%;
 	position: relative;
-	
-	
 }
 
 input:hover {
@@ -21,7 +19,6 @@ input[type=radio]{
 	box-sizing: border-box;
 	margin-right: 10px;
 	margin-left: 50px;
-
 	border: 1px solid #b4b9be;
 	background: #fff;
 	color: #000;
@@ -114,4 +111,12 @@ input[type=button],
 	color: #fff;
 	font-size: 1.8em;
 }
+
+select {
+	padding:2.5px 12px;
+	margin-left: 5px;
+	margin-right: 5px;
+}
+
+
 /*Campos*/
